fix: display on smaller devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @use "@angular/material" as mat;
 @import "../styles";
 
-$footer-height: 100px;
+$footer-height: 64px;
 
 .wrapper {
   min-height: 100%;
