--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -67,14 +67,19 @@
   }
 }
 
+.description-2 {
+  text-align: center;
+  margin: 0 auto 32px;
+}
+
 .question {
-  height: 48px;
+  min-height: 48px;
   margin: 60px 0 16px;
   font-weight: 800;
   text-align: center;
 
   @media #{$breakpoint-small} {
-    margin: 36px 0 8px;
+    margin: 36px 0 16px;
   }
 }
 
